--- a/frontend/login_cadastro.html
+++ b/frontend/login_cadastro.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Merccato em Casa</title>
+    <title>Legumes Preciosos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,33 +9,36 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
+  
   <body>
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-md navbar-light bg-success">
-            <!-- Brand/logo -->
-            <a class="navbar-brand" href="#">
-                <img src="/frontend/img/logo.png" alt="logo" style="width:300px;">
-            </a>
-            <!-- Links -->
-        </nav>
-    </div>
-    <div class="container">
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="cadastro.html">Cadastre-se</a>
-        </li>
-      </ul>
-    </div>
-    <div>
-       <h1>Teste Tela de Login</h1>
+    <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-success">
+      <!-- Brand/logo -->
+      <a class="navbar-brand" href="#">
+          <img src="img/logo.png" alt="logo" style="width:300px; margin: -40px -50px -15px -50px;">
+      </a>
+      <!-- Links -->
+    </nav>
+
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#login" role="tab" aria-controls="login" aria-selected="true">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#cadastro" role="tab" aria-controls="cadastro" aria-selected="false">Cadastre-se</a>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+        <p>Login</p>
+      </div>
+      <div class="tab-pane fade" id="cadastro" role="tabpanel" aria-labelledby="cadastro-tab">
+        <p>Cadastre-se</p>
+      </div>
     </div>
     
-      <footer class="footer" >
- 
-      </footer>
+    <footer class="footer" >
+
+    </footer>
  <!--  <h1>My <span style="color: red;">Important</span> Heading</h1>
     <iframe src="/cadastro.html" title="Produtos em promoção" height="200px" width="1920px"></iframe>-->
     <!-- Optional JavaScript -->
