Alterações nas cores do projeto

--- a/frontend/login_cadastro.html
+++ b/frontend/login_cadastro.html
@@ -18,7 +18,7 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-success">
+    <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-salmao">
       <!-- Brand/logo -->
       <a class="navbar-brand" href="#">
           <img src="img/logo.png" alt="logo">
@@ -128,7 +128,7 @@
     <!-- FOOTER -->
     <footer class="bg-dark text-center text-white">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #1CA347; width: 100%; position: absolute; bottom: 0;">
+      <div class="text-center p-3" style="background-color: #ffc0b6; width: 100%; position: absolute; bottom: 0;">
         © 2021 Copyright:
         <a class="text-white" href="">Legumes Preciosos</a>
         <br>
