ligação da pagina index com a pagina de login/cadastro

--- a/frontend/login_cadastro.html
+++ b/frontend/login_cadastro.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-salmao">
       <!-- Brand/logo -->
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
           <img src="img/logo.png" alt="logo">
       </a>
       
