--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,33 @@
         </a>
       </div>
     </nav>
+    <!--Carousel-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+			  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img class="d-block" src="img/logo.png"  width="720" height="420"  style="margin-left: auto; margin-right: auto;" alt="First slide">
+			  </div>
+			  <div class="carousel-item">
+				<img class="d-block" src="img/capa.jpg"   width="80%" height="420"  style="margin-left: auto; margin-right: auto; margin-top: 20px;;" alt="Second slide">
+     <!--   <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400" xmlns="http://www.w3.org/2000/svg" 
+        role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect 
+        width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second slide</text></svg>-->
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		</div>
     
      <!-- FOOTER -->
     <footer class="bg-dark text-center text-white">
@@ -58,7 +85,7 @@
       </div>
       <!-- Copyright -->
     </footer>
-    
+
  <!--  <h1>My <span style="color: red;">Important</span> Heading</h1>
     <iframe src="/cadastro.html" title="Produtos em promoção" height="200px" width="1920px"></iframe>-->
     <!-- Optional JavaScript -->
