banner ajustado e implementado a barra de slides das promoções

--- a/frontend/test.html
+++ b/frontend/test.html
@@ -48,5 +48,17 @@
 			  <span class="sr-only">Next</span>
 			</a>
 		</div>
+
+		 <!-- FOOTER -->
+		<footer class="bg-dark text-center text-white">
+		<!-- Copyright -->
+		<div class="text-center p-3" style="background-color: #ffc0b6; width: 100%; position: absolute; bottom: 0;">
+			© 2021 Copyright:
+			<a class="text-white" href="">Legumes Preciosos</a>
+			<br>
+			Linguagem de Programação III - Jéssica Rocha, Ludmila Brito e Filipe Silva
+		</div>
+		<!-- Copyright -->
+		</footer>
 	</body>
 </html>
