--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,35 @@
         </a>
       </div>
     </nav>
-
+    <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-salmao-dark">
+      <div class="btn-group dropright" style="margin-left: 250px;">
+        <button type="button" class="btn btn-outline-whitesmoke">Categorias</button>
+        <button type="button" class="btn btn-whitesmoke dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <div class="dropdown-menu" style="width: 300px;">
+          
+            <div class="row">
+            <div class="col-sm-10">
+              <!-- Category -->
+              <div class="single category">
+                <h3 class="side-title">Categorias</h3>
+                <ul class="list-unstyled">
+                  <li><a href="" title="">Frutas <span class="pull-right">13</span></a></li>
+                  <li><a href="" title="">Legumes <span class="pull-right">30</span></a></li>
+                  <li><a href="" title="">Folhas <span class="pull-right">13</span></a></li>
+                  <li><a href="" title="">Folhas para Chás <span class="pull-right">13</span></a></li>
+                  <li><a href="" title="">Sementes <span class="pull-right">13</span></a></li>
+                  <li><a href="" title="">Android <span class="pull-right">13</span></a></li>
+                  <li><a href="" title="">IOS <span class="pull-right">13</span></a></li>
+                  <li><a href="" title="">Windows <span class="pull-right">13</span></a></li>
+                </ul>
+               </div>
+            </div> 
+            </div>
+            </div>
+        </div>
+    </nav>
 
     <!--Carousel-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -219,6 +247,7 @@
     </div>
     </section>
 
+    
     <!-- FOOTER -->
 		<footer class="bg-dark text-center text-white">
       <!-- Copyright -->
