implementada as telas de minha conta, meus endereços e editar/criar endereços

--- a/frontend/editar-criar_endereco.html
+++ b/frontend/editar-criar_endereco.html
@@ -50,8 +50,61 @@
     </nav>
 
 
-    <!-- form -->
-    
+    <!-- CREATE/EDIT ADRESS -->
+    <div class="col-md-6 create-edit-adress-display">
+      <h3>Endereço</h3>
+      <form>
+        <div class="form-group">
+          <select class="text-field my-adress-field">
+            <option>Brasil</option>
+          </select>
+          <div class="text-field">
+            <input type="text" id="text_name" required>
+            <label>Nome</label>
+          </div>
+          <div class="text-field">
+            <input type="text" id="text_phone" required>
+            <label>Telefone</label>
+          </div>
+          <div class="form-inline">
+            <div class="text-field my-adress-field-aling-two-elements">
+              <input type="text" id="text_cep" required>
+              <label>CEP</label>
+            </div>
+            <div class="text-field my-adress-field-aling-two-elements">
+              <input type="text" id="text_cep" required>
+              <label>Bairro</label>
+             </div>
+          </div>
+          <div class="text-field">
+            <input type="text" id="text_adress" required>
+            <label>Endereço</label>
+          </div>
+          <div class="form-inline">
+            <div class="text-field my-adress-field-aling-three-elements">
+              <input type="text" id="text_city" required>
+              <label>Cidade</label>
+            </div>
+            <div class="text-field my-adress-field-aling-three-elements">
+              <input type="text" id="text_email" required>
+              <label>UF</label>
+            </div>
+            <div class="text-field my-adress-field-aling-three-elements">
+              <input type="text" id="text_email" required>
+              <label>Número</label>
+            </div>
+          </div>
+          <div class="text-field">
+            <input type="text" id="text_cmp" required>
+            <label>Complemento</label>
+          </div>
+          <div class="form-group">
+            <input type="submit" class="btnSubmit bg-success text-whitesmoke" value="Continuar" />
+        </div>
+        </div>
+      </form>
+    </div>
+  
     
     <!-- FOOTER -->
     <footer class="bg-dark text-center text-white">
