tela de detalhamento dos produtos  em construção

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -380,7 +380,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top news-img" src="img/itens/quinoa.jpg" alt="Livros em promoção" />
                 <div class="card-body">
-                    <h5 class="card-title fonte-card">Quinoa Orgânico 500g</h5>
+                    <h5 class="card-title fonte-card">Quinoa Orgânico <br> 500g</h5>
                     <input type="submit" class="btnSubmit" style="background-color: #ffc0b6;" value="Comprar" />                    
                 </div>
             </div>
@@ -388,7 +388,7 @@
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top news-img" src="img/itens/tapioca.jpg" alt="Livros em promoção"/>
                 <div class="card-body">
-                    <h5 class="card-title fonte-card">Tapioca Orgânica 500g</h5>
+                    <h5 class="card-title fonte-card">Tapioca Orgânica <br>500g</h5>
                     <input type="submit" class="btnSubmit" style="background-color: #ffc0b6;" value="Comprar" />
                 </div>
             </div>
@@ -405,9 +405,9 @@
     <!-- FOOTER -->
 		<footer class="footer">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #ffc0b6; width: 100%; margin-top: 500px;">
+      <div class="text-center p-3" style="background-color: #ffc0b6; width: 100%; margin-top: 200px;">
         © 2021 Copyright:
-        <a class="text-white" href="">Legumes Preciosos</a>
+       Legumes Preciosos
         <br>
         Linguagem de Programação III - Jéssica Rocha, Ludmila Brito e Filipe Silva
       </div>
