Caminho das paginas

--- a/frontend/produtos.html
+++ b/frontend/produtos.html
@@ -49,14 +49,16 @@
       </div>
     </nav>
 
-      <ul class="" style="">
-        <li class="">
-          <a href="index.html">Home  > </a>
-        <li class="">
-          <a href="#"> Produtos</a>
-        </li>
-      
-    </ul>
+    <ul class="menu" style="">
+      <li class="">
+        <a class="menuLink" href="index.html">Home</a>
+      </li>
+      <li> > </li>
+      <li>
+        <a class="menuLink likAtivo" href="#"> Produtos</a>
+      </li>    
+  </ul>
+
     <div class="" style="margin-top: 50px;">
       <div class="row">
           <div class="col-md-2 mb-6 colu card">
