Resolvendo bug dos selects

--- a/frontend/produtos.html
+++ b/frontend/produtos.html
@@ -68,7 +68,7 @@
               <div class="row">
                 <div class="form-group">
                   <label for=""></label>
-                  <select class="form-control select" aria-label="Default select example" name="" id="">
+                  <select class="form-control-select select" aria-label="Default select example" name="" id="">
                     <option selected>Relevância</option>
                     <option value="">Nome [A-Z]</option>
                     <option value="">Nome [Z-A]</option>
