--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,30 +15,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script>
-      function btnMaisVendidos(id, tipoOperacao){
-        var campo = document.getElementById(id)
-        
-        if(campo.value == "")
-          campo.value = 0
-
-        if(tipoOperacao == 'sum'){
-          setBtnMaisVendidos(id, parseInt(campo.value) + 1)
-        }
-
-        else if(tipoOperacao == 'sub'){
-          if(campo.value == 1 || campo.value == 0)
-            setBtnMaisVendidos(id, "")
-          
-          campo.value = parseInt(campo.value) - 1;
-        }
-      }
-
-      function setBtnMaisVendidos(id, valor){
-        document.getElementById(id).value = valor;
-      }
-    </script>
-
+    <script src="js/index.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-salmao">
