Alteração no Title

--- a/frontend/produtos.html
+++ b/frontend/produtos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Legumes Preciosos</title>
+    <title>Produtos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -48,8 +48,8 @@
         </a>
       </div>
     </nav>
-
-    <ul class="menu" style="">
+<!--MENU FIXO-->
+    <ul class="menu">
       <li class="">
         <a class="menuLink" href="index.html">Home</a>
       </li>
@@ -57,7 +57,7 @@
       <li>
         <a class="menuLink likAtivo" href="#"> Produtos</a>
       </li>    
-  </ul>
+    </ul>
 
     <div class="" style="margin-top: 50px;">
       <div class="row">
