--- a/frontend/modelo.html
+++ b/frontend/modelo.html
@@ -53,11 +53,12 @@
     <!-- form -->
     
     
-    <!-- FOOTER -->
-    <footer class="bg-dark text-center text-white">
+        <!-- FOOTER -->
+		<footer class="footer">
       <!-- Copyright -->
-      <div class="text-center p-3 footer">
-        © 2021 Copyright: Legumes Preciosos
+      <div class="text-center p-3" style="background-color: #ffc0b6; width: 100%; margin-top: 500px;">
+        © 2021 Copyright:
+        <a class="text-white" href="">Legumes Preciosos</a>
         <br>
         Linguagem de Programação III - Jéssica Rocha, Ludmila Brito e Filipe Silva
       </div>
