esboço com botões e modals para gerar os relatórios da administração

--- a/frontend/adm_screens/relatorios.html
+++ b/frontend/adm_screens/relatorios.html
@@ -37,7 +37,7 @@
             <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
             <h5 class="card-title">Tempo Médio Por Setor</h5>
             <p class="card-text txt-color-grey">Veja o status da sua compra, devolva ou compre os produtos novamente</p>
-            <a href="#" class="btn btn-teal my-account-btn">Continuar</a>
+            <a href="" data-toggle="modal" data-target=".adm-rel-1" class="btn btn-teal my-account-btn">Continuar</a>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <i class="fa fa-location-arrow fa-3x" aria-hidden="true"></i>
             <h5 class="card-title">Bairros Mais Atendidos</h5>
             <p class="card-text txt-color-grey">Gerencie seus endereços</p> <br>
-            <a href="meus_enderecos.html" class="btn btn-teal my-account-btn">Continuar</a>
+            <a href="" data-toggle="modal" data-target=".adm-rel-2" class="btn btn-teal my-account-btn">Continuar</a>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
             <i class="fa fa-users fa-3x" aria-hidden="true"></i>
             <h5 class="card-title">Clientes Que Mais Compram</h5>
             <p class="card-text txt-color-grey">Solicitar reembolsos e consultar boletos</p> <br>
-            <a href="#" class="btn btn-teal my-account-btn">Continuar</a>
+            <a href="" data-toggle="modal" data-target=".adm-rel-1" class="btn btn-teal my-account-btn">Continuar</a>
           </div>
         </div>
       </div>
@@ -67,7 +67,7 @@
             <i class="fa fa-product-hunt fa-3x" aria-hidden="true"></i>
             <h5 class="card-title">Produtos Mais Vendidos</h5>
             <p class="card-text txt-color-grey">Solicitar reembolsos e consultar boletos</p> <br>
-            <a href="#" class="btn btn-teal my-account-btn">Continuar</a>
+            <a href="" class="btn btn-teal my-account-btn">Continuar</a>
           </div>
         </div>
       </div>
@@ -77,12 +77,102 @@
             <i class="fa fa-th fa-3x" aria-hidden="true"></i>
             <h5 class="card-title">Outros</h5>
             <p class="card-text txt-color-grey">Solicitar reembolsos e consultar boletos</p> <br>
-            <a href="#" class="btn btn-teal my-account-btn">Continuar</a>
+            <a href="" class="btn btn-teal my-account-btn">Continuar</a>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- MODALS -->
+    <!-- MODAL 1 -->
+    <div class="modal fade adm-rel-1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <table class="table table-hover adm-modal-table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nome</th>
+                <th scope="col">CPF</th>
+                <th scope="col">Telefone</th>
+                <th scope="col">Compras</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Ludmila Brito</td>
+                <td>888.777.666-55</td>
+                <td>(71) 98888-9999</td>
+                <td>55</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Ana Patrícia</td>
+                <td>888.777.666-55</td>
+                <td>(71) 98888-9999</td>
+                <td>32</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Jéssica Rocha</td>
+                <td>888.777.666-55</td>
+                <td>(71) 98888-9999</td>
+                <td>15</td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>Filipe Silva</td>
+                <td>888.777.666-55</td>
+                <td>(71) 98888-9999</td>
+                <td>2</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <!-- MODAL 2-->
+    <div class="modal fade adm-rel-2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <table class="table table-hover adm-modal-table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Cidade</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Compras</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Pernambués</td>
+                <td>Salvador</td>
+                <td>BA</td>
+                <td>1459</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Imbuí</td>
+                <td>Salvador</td>
+                <td>BA</td>
+                <td>1297</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Barra Funda</td>
+                <td>São Paulo</td>
+                <td>SP</td>
+                <td>1266</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
 
     <!-- FOOTER -->
     <footer class="bg-dark text-center text-white">
