--- a/frontend/carrinho.html
+++ b/frontend/carrinho.html
@@ -323,7 +323,16 @@
 
     </div>
 
-
+ <!-- FOOTER -->
+ <footer class="bg-dark text-center text-white">
+  <!-- Copyright -->
+  <div class="text-center p-3 footer">
+    © 2021 Copyright: Legumes Preciosos
+    <br>
+    Linguagem de Programação III - Jéssica Rocha, Ludmila Brito e Filipe Silva
+  </div>
+  <!-- Copyright -->
+</footer>
 
  
 
