Atualizando minhas compras

--- a/frontend/minhas-compras.html
+++ b/frontend/minhas-compras.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Legumes Preciosos</title>
+    <title>Minhas compras</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -55,7 +55,7 @@
         </li>
         <li> > </li>
         <li>
-          <a class="menuLink likAtivo" href="#"> Compras</a>
+          <a class="menuLink likAtivo" href="#"> Minha compras</a>
         </li>    
       </ul>
 
@@ -66,8 +66,8 @@
         <div class="card">
             <div class="row">
                 <div class="col">
-                    <h7 class="card-text">PEDIDO REALIZADO</h7>
-                    <p class="card-text">14/04/2021</p>
+                    <p class="text-compras">PEDIDO Nº 0051</p>
+                    <p class="">14/04/2021</p>
                 </div>
                 <div class="col">
                     <h7 class="card-text">TOTAL</h7>
@@ -83,12 +83,30 @@
             </div>
             <div class="card-body">
                 <div class="row align-compras">
-                    <img class="card-img-top img-compras" src="/frontend/img/itens/laranja.jpg" alt="Card image cap">
-                    <p class="card-text">Laranjas</p>
+                    <div class="col-md-2">
+                        <img class="card-img-top img-compras" src="/frontend/img/itens/laranja.jpg" alt="Soja">
+                    </div>
+                    <div class="col-md-10">
+                        <p class="">Laranjas</p>
+                    </div>
                 </div>
                 <div class="row align-compras">
-                    <img class="card-img-top img-compras" src="/frontend/img/itens/soja.jpg" alt="Card image cap">
-                    <p class="card-text">Soja em grãos Orgânico Importada 500g.</p>
+                    <div class="col-md-2">
+                        <img class="card-img-top img-compras" src="/frontend/img/itens/soja.jpg" alt="Soja">
+                    </div>
+                    <div class="col-md-10">
+                        <p class="">Soja em grãos Orgânico Importada 500g.</p>
+                        <p class="">Quantidade: </p>
+                        <p class="">Valor Unitário: </p>
+                    </div>
+                </div>
+                <div class="row align-compras">
+                    <div class="col-md-2">
+                        <img class="card-img-top img-compras" src="/frontend/img/itens/tamarindo.jpg" alt="Soja">
+                    </div>
+                    <div class="col-md-10">
+                        <p class="">Soja em grãos Orgânico Importada 500g.</p>
+                    </div>
                 </div>
             </div>
           </div>
