Redirecionando as paginas

--- a/frontend/carrinho.html
+++ b/frontend/carrinho.html
@@ -136,7 +136,7 @@
 
             </div>
             <div class="col=md-2">
-              <button type="button" class="btn offs-btn-submit btn-lg">Finalizar compra</button>
+              <button type="button" class="btn offs-btn-submit btn-lg" onClick="location.href='finalizarcompra.html'">Finalizar compra</button>
             </div>
             <div class="col-md-2">
 
