--- a/frontend/produtos-detalhes.html
+++ b/frontend/produtos-detalhes.html
@@ -77,7 +77,7 @@
             <button type="button"  class="btn btn-salmao" value=>+</button>
               </div><br>
               <div class="row" style="margin-left: 150px; width: 220px;">
-              <input type="submit" class="btnSubmit offs-btn-submit" style="font-size: 20px; color: black; padding: 10px" value="Adicionar ao carrinho"/>
+              <input type="submit" class="btnSubmit offs-btn-submit" style="font-size: 20px; color: black; padding: 10px" value="Adicionar ao carrinho" onClick="location.href='carrinho.html'"/>
             </div>
            </div>
         </div>
