desenolvimento dos relatórios da administração

--- a/frontend/adm_screens/dash_rel/index.html
+++ b/frontend/adm_screens/dash_rel/index.html
@@ -59,11 +59,11 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="rel_tmp_medio_setor.html">
                     <i class="fa fa-clock-o"></i>
                     <span>Tempo médio por setor</span></a>
 
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="rel_bairros_mais_atendidos.html">
                     <i class="fa fa-location-arrow"></i>
                     <span>Bairros mais atendidos</span></a>
                 
