pequenas alterações nas telas relacionadas as footer, botões e componentes em geral para atingir uma maior usabilidade das mesmas classes e estilos nas telas. no arquivo .scss foi colocado algumas flags (##### footer #####) para indicar as classes que foram destinadas para tal tela

--- a/frontend/carrinho.html
+++ b/frontend/carrinho.html
@@ -80,13 +80,17 @@
                   </div>
                 </form>
                <small>Contagem de unidades: 1</small><br>
-               <select>
-                <option>Qtd: 1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
+               
+              <form action="">
+                <select name="form-qntd" class="form-control carrinho-select-qntd" id="qntd">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                </select>
+              </form>
 
               <small><p>Excluir | Salvar para mais tarde</p></small></div>
               <div class="col-md-2" >
