--- a/frontend/minhas-compras.html
+++ b/frontend/minhas-compras.html
@@ -77,13 +77,13 @@
                           </ol>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img src="/frontend/img/itens/pimentao.webp" class="d-block w-100" alt="...">
+                              <img src="img/itens/pimentao.webp" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                              <img src="/frontend/img/itens/caqui.jpeg" class="d-block w-100" alt="...">
+                              <img src="img/itens/caqui.jpeg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                              <img src="/frontend/img/itens/laranja.jpg" class="d-block w-100" alt="...">
+                              <img src="img/itens/laranja.jpg" class="d-block w-100" alt="...">
                             </div>
                           </div>
                           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -131,7 +131,7 @@
             <div class="modal-body">
               <div class="row" style="margin-top: 20px;">
                   <div class="col-md-5">
-                    <img class="card-img-top" src="/frontend/img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> 
+                    <img class="card-img-top" src="img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> 
                   </div>
                   <div class="col-md-7">
                       <h6>Soja em grãos Orgânico Importada 500g</h6>
@@ -144,7 +144,7 @@
               </div> <hr>
               <div class="row" style="margin-top: 20px;">
                   <div class="col-md-5">
-                <img class="card-img-top" src="/frontend/img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> </div>
+                <img class="card-img-top" src="img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> </div>
                 <div class="col-md-7">
                     <h6>Soja em grãos Orgânico Importada 500g</h6>
                     <small style="line-height: 10px;">
