--- a/frontend/rastrear-compras.html
+++ b/frontend/rastrear-compras.html
@@ -96,12 +96,11 @@
       </div>
     </div>
  
-        <!-- FOOTER -->
-		<footer class="footer">
+    <!-- FOOTER -->
+    <footer class="bg-dark text-center text-white">
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #ffc0b6; width: 100%; margin-top: 500px;">
-        © 2021 Copyright:
-        <a class="text-white" href="">Legumes Preciosos</a>
+      <div class="text-center p-3 footer" style="margin-top: 460px;">
+        © 2021 Copyright: Legumes Preciosos
         <br>
         Linguagem de Programação III - Jéssica Rocha, Ludmila Brito e Filipe Silva
       </div>
