alterações diversas relacionadas aos componenetes: nova navbar, tela de index, padronização dos botões e campos que são utilizados

--- a/frontend/finalizarcompra.html
+++ b/frontend/finalizarcompra.html
@@ -64,7 +64,7 @@
                 Salvador, BA, 827430-229<br>       
                 Brasil<br>          
                 Telefone: (71) 99999-9999</p> 
-                <a style="color:#006400" href="editar-criar_endereco.html"> <small><i class="fa fa-home fa-3x" style="font-size: 30px;" aria-hidden="true"></i></small> Alterar endereço de entrega</a>
+                <a style="color:#006400" class="text-decoration-none" href="editar-criar_endereco.html"> <small><i class="fa fa-home fa-3x" style="font-size: 30px;" aria-hidden="true"></i></small> Alterar endereço de entrega</a>
 
             </div>
 
@@ -73,7 +73,7 @@
                 <p style="display: inline">2 Produtos</p>
                      <!-- Button to Open the Modal -->
          <button type="button" class="btn " style="display: inline; text-decoration: underline" data-toggle="modal" data-target="#myModal">
-         visualisar
+         Visualizar
          </button>
 
          <!-- The Modal -->
@@ -91,7 +91,7 @@
         <div class="modal-body">
          <div class="row" style="margin-top: 20px;">
              <div class="col-md-5">
-            <img class="card-img-top" src="/frontend/img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> </div>
+            <img class="card-img-top" src="img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> </div>
             <div class="col-md-7">
                 <h6>Soja em grãos Orgânico Importada 500g</h6>
                 <small style="line-height: 10px;">
@@ -105,7 +105,7 @@
          </div> <hr>
          <div class="row" style="margin-top: 20px;">
             <div class="col-md-5">
-           <img class="card-img-top" src="/frontend/img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> </div>
+           <img class="card-img-top" src="img/itens/soja.jpg" alt="Livros em promoção" style="width:130px"> </div>
            <div class="col-md-7">
                <h6>Soja em grãos Orgânico Importada 500g</h6>
                <small style="line-height: 10px;">
@@ -295,7 +295,7 @@
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/frontend/js/avaliacao.js"></script>
+    <script src="js/avaliacao.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
