--- a/frontend/login_cadastro.html
+++ b/frontend/login_cadastro.html
@@ -18,7 +18,7 @@
   </head>
   
   <body>
-    <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-salmao">
+    <nav class="navbar navbar-expand-md navbar-static-top navbar-light bg-salmao shadow">
       <!-- Brand/logo -->
       <a class="navbar-brand" href="index.html">
           <img src="img/logo.png" alt="logo">
