--- a/frontend/produtos-detalhes.html
+++ b/frontend/produtos-detalhes.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="js/produtos-detalhes.js"></script>
+    <script src="js/index.js"></script>
   </head>
   
   <body>
