--- a/frontend/rastrear-compras.html
+++ b/frontend/rastrear-compras.html
@@ -107,17 +107,23 @@
     </nav>
 
     <!--MENU FIXO-->
-    <ul class="menu">
-      <li class="">
-        <a class="menuLink" href="minha_conta.html">Minha conta</a>
-      </li>
-      <li> > </li>
-      <li>
-        <a class="menuLink likAtivo" href="#"> Minha compras</a>
-      </li>    
-    </ul>
+    <div class="container" style="margin-left: 15%;">
+      <ul class="menu">
+        <li class="">
+          <a class="menuLink" href="minha_conta.html">Minha conta</a>
+        </li>
+        <li> > </li>
+        <li>
+          <a class="menuLink" href="minhas-compras.html"> Minha compras</a>
+        </li>  
+        <li> > </li>
+        <li>
+          <a class="menuLink likAtivo" href="#"> Rastrear compras</a>
+        </li>    
+      </ul>
+    </div>
 
-    <div class="container">
+    <div class="container" style="margin-top: 50px; margin-bottom: 100px;">
       <h3 class="mb-3 offs-label text-monospace text-center">Sua compra foi para Conferência e Embalagem!</h3>
     </div>
     <!-- Rastrear -->
@@ -166,6 +172,8 @@
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/index.js"></script>
+    <script src="jquerry.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
